--- a/KNetworkStorage.uplugin
+++ b/KNetworkStorage.uplugin
@@ -1,8 +1,8 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0.0",
-	"SemVersion": "1.0.0",
+	"VersionName": "1.0.2",
+	"SemVersion": "1.0.2",
 	"FriendlyName": "KNetworkStorage",
 	"Description": "",
 	"Category": "Modding",
@@ -19,14 +19,18 @@
 		{
 			"Name": "SML",
 			"SemVersion": "^3.6.1",
-			"Enabled": false
+			"Enabled": false,
+			"BasePlugin": false
 		},
 		{
 			"Name": "KLib",
-			"SemVersion": "^3.0.0",
+			"SemVersion": "^3.1.2",
 			"bIsOptional": false,
 			"bIsBasePlugin": false,
-			"Enabled": true
+			"Enabled": true,
+			"BasePlugin": false
 		}
-	]
+	],
+	"RemoteVersionRange": "",
+	"AcceptsAnyRemoteVersion": false
 }
