--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,6 +195,9 @@ jobs:
         timeout-minutes: 60
         runs-on: ubuntu-latest
         steps:
+          - name: Checkout Repo
+            uses: actions/checkout@v3
+
           - name: Install ficsit-cli and jq
             run: |
               sudo apt-get update 
@@ -216,11 +219,6 @@ jobs:
               version: 8
               run_install: false
 
-          - name: Checkout Repo
-            uses: actions/checkout@v3
-            with:
-              path: 'Mod'
-
           - name: Checkout Patcher
             uses: actions/checkout@v3
             with:
@@ -231,8 +229,8 @@ jobs:
           - name: Release with ficsit-cli
             id: ficsit
             run: |
-              VERSION=$(cat Mod/${{ env.MAIN_MOD }}.uplugin | jq -r '.SemVersion')
-              CHANGELOGPATH=Mod/changelogs/$VERSION.md
+              VERSION=$(cat ${{ env.MAIN_MOD }}.uplugin | jq -r '.SemVersion')
+              CHANGELOGPATH=changelogs/$VERSION.md
               if test -f "$CHANGELOGPATH"; then
                 CHANGELOG=$(cat $CHANGELOGPATH)
                 ficsit smr upload --api-key "${{ secrets.FICSIT_TOKEN }}" "${{ env.MOD_ID }}" "mod.zip" "$CHANGELOG"
@@ -250,7 +248,7 @@ jobs:
               repo: "Satisfactory-KMods/${{ env.MAIN_MOD }}"
               tag_name: ${{ steps.ficsit.outputs.VERSION }}
               release_name: "Release ${{ steps.ficsit.outputs.VERSION }}"
-              body_path: "Mod/changelogs/${{ steps.ficsit.outputs.VERSION }}.md"
+              body_path: "changelogs/${{ steps.ficsit.outputs.VERSION }}.md"
               draft: false
               prerelease: false
 
@@ -264,6 +262,12 @@ jobs:
           matrix:
             mod: ["KBFL", "KPrivateCodeLib", "KUI", "KLib"]
         steps:
+          - name: Checkout Repo
+            uses: actions/checkout@v3
+            with:
+              repository: 'Satisfactory-KMods/${{ matrix.mod }}'
+              token: ${{ secrets.PAT }}
+
           - name: Install ficsit-cli and jq
             run: |
               sudo apt-get update 
@@ -285,11 +289,6 @@ jobs:
               version: 8
               run_install: false
 
-          - name: Checkout Repo
-            uses: actions/checkout@v3
-            with:
-              path: 'Mod'
-
           - name: Checkout Patcher
             uses: actions/checkout@v3
             with: 
@@ -300,14 +299,14 @@ jobs:
           - name: Release with ficsit-cli
             id: ficsit
             run: |
-              VERSION=$(cat Mod/${{ matrix.mod }}.uplugin | jq -r '.SemVersion')
-              CHANGELOGPATH=Mod/changelogs/$VERSION.md
+              VERSION=$(cat ${{ matrix.mod }}.uplugin | jq -r '.SemVersion')
+              CHANGELOGPATH=changelogs/$VERSION.md
               if test -f "$CHANGELOGPATH"; then
                 CHANGELOG=$(cat $CHANGELOGPATH)
                 ficsit smr upload --api-key "${{ secrets.FICSIT_TOKEN }}" "${{ env.MOD_ID }}" "mod.zip" "$CHANGELOG"
                 echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
                 exit 0
-              fi
+              fi 
               exit 1
 
           - name: Create Release
@@ -319,6 +318,6 @@ jobs:
               repo: "Satisfactory-KMods/${{ matrix.mod }}"
               tag_name: ${{ steps.ficsit.outputs.VERSION }}
               release_name: "Release ${{ steps.ficsit.outputs.VERSION }}"
-              body_path: "Mod/changelogs/${{ steps.ficsit.outputs.VERSION }}.md"
+              body_path: "changelogs/${{ steps.ficsit.outputs.VERSION }}.md"
               draft: false
               prerelease: false
