--- a/KNetworkStorage.uplugin
+++ b/KNetworkStorage.uplugin
@@ -18,7 +18,7 @@
 	"Plugins": [
 		{
 			"Name": "SML",
-			"SemVersion": "^3.7.0",
+			"SemVersion": "^3.8.0",
 			"Enabled": false,
 			"BasePlugin": false
 		},
@@ -32,5 +32,6 @@
 		}
 	],
 	"RemoteVersionRange": "",
-	"AcceptsAnyRemoteVersion": false
+	"AcceptsAnyRemoteVersion": false,
+	"GameVersion": ">=365306"
 }
